--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/dstock3/restaurant-page#readme",
   "devDependencies": {
+    "css-loader": "^6.2.0",
+    "csv-loader": "^3.0.3",
+    "style-loader": "^3.2.1",
     "webpack": "^5.49.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "xml-loader": "^1.2.1"
   }
 }
